try/envoy.yaml
admin:
    access_log_path: /tmp/admin_access.log
    address:
        socket_address:
            protocol: TCP
            address: 127.0.0.1
            port_value: 9901
static_resources:
    listeners:
        - name: listener_0
          address:
              socket_address:
                  protocol: TCP
                  address: 0.0.0.0
                  port_value: 10000
          filter_chains:
              - filters:
                    - name: envoy.http_connection_manager
                      typed_config:
                          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
                          stat_prefix: ingress_http
                          route_config:
                              name: local_route
                              virtual_hosts:
                                  - name: local_service
                                    domains: ["*"]
                                    routes:
                                        - match:
                                              prefix: "/"
                                          route:
                                              host_rewrite: localhost
                                              cluster: debug
                          http_filters:
                              - name: envoy.ext_authz
                                typed_config:
                                    "@type": type.googleapis.com/envoy.config.filter.http.ext_authz.v2.ExtAuthz
                                    grpc_service:
                                        envoy_grpc:
                                            cluster_name: grpc
                                        timeout: 1s
                              - name: envoy.router
    clusters:
        - name: debug
          connect_timeout: 0.25s
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: RANDOM
          load_assignment:
              cluster_name: debug
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: localhost
                                      port_value: 8081
        - name: grpc
          connect_timeout: 0.25s
          type: STRICT_DNS
          dns_lookup_family: V4_ONLY
          lb_policy: RANDOM
          http2_protocol_options: {}
          load_assignment:
              cluster_name: grpc
              endpoints:
                  - lb_endpoints:
                        - endpoint:
                              address:
                                  socket_address:
                                      address: localhost
                                      port_value: 9000
